[tool.poetry]
name = "news-relay-bot"
version = "0.1.0"
description = "Multi-user Telegram news relay bot with GPT rewriting"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.7.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
telethon = "^1.36.0"
aiohttp = "^3.9.5"
apscheduler = "^3.10.4"
redis = "^5.0.4"
rq = "^1.16.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
feedparser = "^6.0.11"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
langdetect = "^1.0.9"
python-dateutil = "^2.9.0"
pytz = "^2024.1"
cryptography = "^42.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
black = "^24.4.2"
ruff = "^0.4.4"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

